--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 Python Trainning Scripts/Curso Selenium Python/chromedriver.exe
 Mundiale Projects/chromedriver.exe
 *.xlsx
+Mundiale Projects/Automatização Testes Fluxo ISPs/chromedriver.exe
