--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ Python Trainning Scripts/Curso Selenium Python/chromedriver.exe
 Mundiale Projects/chromedriver.exe
 *.xlsx
 Mundiale Projects/Automatização Testes Fluxo ISPs/chromedriver.exe
+Mundiale Projects/Automatização Testes Fluxo ISPs/.vscode/settings.json
+Mundiale Projects/Automatização Testes Fluxo ISPs/funcoes_novoBOT/__pycache__/__init__.cpython-39.pyc
+Mundiale Projects/Automatização Testes Fluxo ISPs/TESTE.py
