Primeira Interface BOT

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ Mundiale Projects/Automatização Testes Fluxo ISPs/chromedriver.exe
 Mundiale Projects/Automatização Testes Fluxo ISPs/.vscode/settings.json
 Mundiale Projects/Automatização Testes Fluxo ISPs/funcoes_novoBOT/__pycache__/__init__.cpython-39.pyc
 Mundiale Projects/Automatização Testes Fluxo ISPs/TESTE.py
+Trainning Scripts/Interface Gráfica/__pycache__/PySimpleGUI.cpython-310.pyc
+Trainning Scripts/Interface Gráfica/base.py
+Trainning Scripts/Interface Gráfica/PySimpleGUI.py
+Trainning Scripts/Interface Gráfica/Tkinter.py
