--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Trainning Scripts/Interface Gráfica/__pycache__/PySimpleGUI.cpython-310.pyc
 Trainning Scripts/Interface Gráfica/base.py
 Trainning Scripts/Interface Gráfica/PySimpleGUI.py
 Trainning Scripts/Interface Gráfica/Tkinter.py
+Trainning Scripts/Interface Gráfica/chromedriver.exe
