--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Trainning Scripts/Interface Gráfica/base.py
 Trainning Scripts/Interface Gráfica/PySimpleGUI.py
 Trainning Scripts/Interface Gráfica/Tkinter.py
 Trainning Scripts/Interface Gráfica/chromedriver.exe
+Mundiale Projects/Automatização Testes Fluxo ISPs/BOT LP com interface/chromedriver.exe
